# rust-waveshare-usb-can-a

./: Cargo.toml  LICENSE-MIT  README.md  run-hw-tests
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
doc/waveshare/: README.md
examples/: selftest.rs
lib/: Cargo.toml
lib/src/: lib.rs  proto.rs  sync.rs  tokio.rs
lib/src/tests/: mod.rs  sync.rs  tokio.rs
lib/tests/: sync.rs  tokio.rs
src/: cli.rs  lib.rs  main.rs
