[workspace]
members = [
    "lib",
    "cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/im-0/rust-waveshare-usb-can-a"
readme = "README.md"

[workspace.dependencies.anyhow]
version = "1.0.98"
default-features = false
features = ["std"]

[workspace.dependencies.clap]
version = "4.5.37"
default-features = false
features = ["cargo", "color", "derive", "error-context", "help", "std", "usage", "wrap_help"]

[workspace.dependencies.embedded-can]
version = "0.4.1"
default-features = false
features = []

[workspace.dependencies.proptest]
version = "1.6.0"
default-features = false
features = ["bit-set", "std"]

[workspace.dependencies.proptest-derive]
version = "0.5.1"
default-features = false
features = []

[workspace.dependencies.rustix]
version = "1.0.5"
default-features = false
features = ["alloc", "pty"]

[workspace.dependencies.serialport]
version = "4.7.1"
default-features = false
features = []

[workspace.dependencies.thiserror]
version = "2.0.12"
default-features = false
features = []

[workspace.dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["std"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = [
    "ansi",
    "chrono",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
]

[workspace.dependencies.tokio]
version = "1.44.2"
default-features = false
features = [
    "io-util",
    "sync",
    "time",
]

[workspace.dependencies.tokio-serial]
version = "5.4.5"
default-features = false
features = []

[workspace.dependencies.waveshare-usb-can-a]
version = "0.1.0"
default-features = false
features = ["sync"]
path = "lib"

# Fix https://github.com/serialport/serialport-rs/issues/7 by applying
# patch from https://github.com/serialport/serialport-rs/pull/192.
[patch.crates-io.serialport]
git = "https://github.com/im-0/serialport-rs"
rev = "eb60844272f60d8df5271605a122cb9ef7bf6209"

# Bring back VMIN=1 so async does not break after fixing
# https://github.com/serialport/serialport-rs/issues/7.
[patch.crates-io.mio-serial]
git = "https://github.com/im-0/mio-serial"
rev = "2411c0abbb976c08f28aa090309c1c81ad605a19"
