[package]
name = "waveshare-usb-can-a-cli"
description = "CLI tool for Waveshare's USB to CAN Adapter Model A"

keywords = [
    "usb",
    "can",
    "cli",
    "serial",
]
categories = [
    "command-line-utilities",
    "hardware-support",
]

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "waveshare-usb-can-a"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
embedded-can = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
waveshare-usb-can-a = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
