[package]
name = "waveshare-usb-can-a"
description = "Library for Waveshare's USB to CAN Adapter Model A"

keywords = [
    "usb",
    "can",
    "serial",
]
categories = [
    "hardware-support",
]

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[features]
default = ["sync"]
sync = ["dep:serialport", "dep:tracing"]

[dependencies]
embedded-can = { workspace = true }
serialport = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rustix = { workspace = true }
tracing-subscriber = { workspace = true }
